# app/Http/Controllers/DoctorController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\SearchRequest;
 use App\Http\Resources\DoctorResource;
 use App\Models\Doctor;
 use Illuminate\Http\Request;
@@ -17,52 +18,7 @@ class DoctorController extends Controller
      *     @OA\Response(
      *         response=200,
      *         description="OK",
-     *         @OA\JsonContent(
-     *             type="array",
-     *             @OA\Items(
-     *                 @OA\Property(
-     *                     property="doctor_id",
-     *                     type="integer",
-     *                     example=1
-     *                 ),
-     *                 @OA\Property(
-     *                     property="first_name",
-     *                     type="string",
-     *                     example="John"
-     *                 ),
-     *                 @OA\Property(
-     *                     property="last_name",
-     *                     type="string",
-     *                     example="Doe"
-     *                 ),
-     *                 @OA\Property(
-     *                     property="specialization_id_fk",
-     *                     type="integer",
-     *                     example=12
-     *                 ),
-     *                 @OA\Property(
-     *                     property="doctor_rooms",
-     *                     type="array",
-     *                     @OA\Items(
-     *                         @OA\Property(
-     *                             property="doctor_room_id",
-     *                             type="integer",
-     *                             example=1
-     *                         ),
-     *                         @OA\Property(
-     *                             property="room",
-     *                             type="string",
-     *                             example="151"
-     *                         ),
-     *                         @OA\Property(
-     *                             property="doctor_id_fk",
-     *                             type="integer",
-     *                             example=1
-     *                         )
-     *                     )
-     *                 )
-     *             )
-     *         )
+     *         
      *     ),
      *     @OA\Response(
      *         response="404",
@@ -103,54 +59,6 @@ class DoctorController extends Controller
      *     @OA\Response(
      *         response=200,
      *         description="OK",
-     *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(
-     *                 property="doctor",
-     *                 type="object",
-     *                 @OA\Property(
-     *                     property="doctor_id",
-     *                     type="integer",
-     *                     example=1
-     *                 ),
-     *                 @OA\Property(
-     *                     property="first_name",
-     *                     type="string",
-     *                     example="John"
-     *                 ),
-     *                 @OA\Property(
-     *                     property="last_name",
-     *                     type="string",
-     *                     example="Doe"
-     *                 ),
-     *                 @OA\Property(
-     *                     property="specialization_id_fk",
-     *                     type="integer",
-     *                     example=12
-     *                 ),
-     *                 @OA\Property(
-     *                     property="doctor_rooms",
-     *                     type="array",
-     *                     @OA\Items(
-     *                         @OA\Property(
-     *                             property="doctor_room_id",
-     *                             type="integer",
-     *                             example=1
-     *                         ),
-     *                         @OA\Property(
-     *                             property="room",
-     *                             type="string",
-     *                             example="151"
-     *                         ),
-     *                         @OA\Property(
-     *                             property="doctor_id_fk",
-     *                             type="integer",
-     *                             example=1
-     *                         )
-     *                     )
-     *                 )
-     *             )
-     *         )
      *     ),
      *     @OA\Response(
      *         response="404",
@@ -172,46 +80,6 @@ class DoctorController extends Controller
         //
     }
 
-    /**
-     * @OA\Delete(
-     *     path="/api/doctors/{id}",
-     *     tags={"Doctors"},
-     *     summary="Delete Doctor by ID",
-     *     description="Delete a doctor by its ID",
-     *     security={{"bearer_token":{}}},
-     *     @OA\Parameter(
-     *         description="Doctor ID",
-     *         in="path",
-     *         name="id",
-     *         required=true,
-     *         @OA\Schema(
-     *             type="string"
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response=200,
-     *         description="OK",
-     *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(
-     *                 property="messages",
-     *                 type="string",
-     *                 example="دکتر مورد نظر با موفقیت حذف شد."
-     *             )
-     *         )
-     *     ),
-     *     @OA\Response(
-     *         response="404",
-     *         description="Not Found"
-     *     )
-     * )
-     */
-    public function destroy(string $id)
-    {
-        $doctor = Doctor::findOrFail($id);
-        $doctor->destroy($id);
-        return json_encode([
-            'messages' => 'دکتر مورد نظر با موفقیت حذف شد.'
-        ]);
-    }
+
+
 }
