# app/Http/Controllers/UserController.php
@@ -18,64 +18,7 @@ class UserController extends Controller
      *     @OA\Response(
      *         response=200,
      *         description="OK",
-     *         @OA\JsonContent(
-     *             type="object",
-     *             @OA\Property(
-     *                 property="id",
-     *                 type="string",
-     *                 example="1"
-     *             ),
-     *             @OA\Property(
-     *                 property="firstName",
-     *                 type="string",
-     *                 example="John"
-     *             ),
-     *             @OA\Property(
-     *                 property="lastName",
-     *                 type="string",
-     *                 example="Doe"
-     *             ),
-     *             @OA\Property(
-     *                 property="phone",
-     *                 type="string",
-     *                 example="0123456789"
-     *             ),
-     *             @OA\Property(
-     *                 property="nationalCode",
-     *                 type="string",
-     *                 example="1234567890"
-     *             ),
-     *             @OA\Property(
-     *                 property="gender",
-     *                 type="string",
-     *                 example="مرد"
-     *             ),
-     *             @OA\Property(
-     *                 property="birthday",
-     *                 type="string",
-     *                 example="1990-01-01"
-     *             ),
-     *             @OA\Property(
-     *                 property="code",
-     *                 type="string",
-     *                 example="123456"
-     *             ),
-     *             @OA\Property(
-     *                 property="status",
-     *                 type="string",
-     *                 example="active"
-     *             ),
-     *             @OA\Property(
-     *                 property="createdAt",
-     *                 type="string",
-     *                 example="2022-01-01 00:00:00"
-     *             ),
-     *             @OA\Property(
-     *                 property="updatedAt",
-     *                 type="string",
-     *                 example="2022-01-01 00:00:00"
-     *             )
-     *         )
+     *         
      *     ),
      *     @OA\Response(
      *         response="401",
